--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+spring.profile.active=production
+
 server.port=8081
+#Database setup
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Password@11
+spring.datasource.username=${DB_userName}
+spring.datasource.password=${DB_pwd}
 
 spring.jpa.hibernate.ddl-auto=update
