--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profile.active=production
 
 server.port=8081
 #Database setup
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll_app
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=${DB_userName}
 spring.datasource.password=${DB_pwd}
